--- a/templates/scaledobject.yaml
+++ b/templates/scaledobject.yaml
@@ -5,6 +5,13 @@ apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
   name: {{ .name }}
+  labels:
+    app.kubernetes.io/name: {{ include "helm.name" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/version: {{ .Chart.AppVersion }}
+    app.kubernetes.io/component: scaledobject
+    helm.sh/chart: {{ include "helm.chart" . }}
 spec:
   scaleTargetRef:
     name: {{ .name }}
