--- a/templates/scaledobject.yaml
+++ b/templates/scaledobject.yaml
@@ -6,12 +6,7 @@ kind: ScaledObject
 metadata:
   name: {{ .name }}
   labels:
-    app.kubernetes.io/name: {{ include "helm.name" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/version: {{ .Chart.AppVersion }}
-    app.kubernetes.io/component: scaledobject
-    helm.sh/chart: {{ include "helm.chart" . }}
+    {{- include "helm.labels" $ | nindent 4 }}
 spec:
   scaleTargetRef:
     name: {{ .name }}
