--- a/values.yaml
+++ b/values.yaml
@@ -2,6 +2,8 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+name: keda-scaler
+
 global:
   aws:
     region: "us-east-1"
